Projects/Cognyte/cognyte_devops_lab/net/p-c.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-c
  labels:
    app: pod-c
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
