Projects/Cognyte/cognyte_devops_lab/net/s-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: pod-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
