Projects/Cognyte/cognyte_devops_lab/net/s-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: pod-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
